--- a/frontend/src/components/header/Header.css
+++ b/frontend/src/components/header/Header.css
@@ -1,9 +1,11 @@
 .header {
   height: 34vw;
   margin: 30px auto;
-  background: url("/header_img.png") no-repeat;
+  background: url("/header_img2.png");
+  /* background: url("/header_img2.png") no-repeat */
   background-size: contain;
   position: relative;
+  opacity: 120%;
 }
 
 .header-contents {
