--- a/frontend/src/pages/PlaceOrder/PlaceOrder.css
+++ b/frontend/src/pages/PlaceOrder/PlaceOrder.css
@@ -1,41 +1,57 @@
-.place-order{
-    display: flex;
-    margin-top: 100px;
-    justify-content: space-between;
-    gap: 50px;
-    align-items: start;
+.place-order {
+  display: flex;
+  margin-top: 100px;
+  justify-content: space-between;
+  gap: 50px;
+  align-items: start;
 }
 
-.place-order-left{
-    width: 100%;
-    max-width: max(30%,500px);
+.place-order-left {
+  width: 100%;
+  max-width: max(30%, 500px);
 }
 
-.place-order-left .title{
-    font-size: 30px;
-    font-weight: 600;
-    margin-bottom: 50px;
+.place-order-left .title {
+  font-size: 30px;
+  font-weight: 600;
+  margin-bottom: 50px;
 }
 
-.place-order-left input{
-    margin-bottom: 10px;
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #c5c5c5;
-    border-radius: 4px;
-    outline-color: tomato;
+.place-order-left input {
+  margin-bottom: 10px;
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #c5c5c5;
+  border-radius: 4px;
+  outline-color: tomato;
 }
 
-.place-order-left .multi-fields{
-    display: flex;
-    gap: 10px;
+.place-order-left .multi-fields {
+  display: flex;
+  gap: 10px;
 }
 
-.place-order-right{
-    width: 100%;
-    max-width: max(40%,500px);
+.place-order-right {
+  width: 100%;
+  max-width: max(40%, 500px);
 }
 
-.place-order .cart-total button{
-    margin-top: 30px;
+.place-order .cart-total button {
+  margin-top: 30px;
+}
+
+.shimmer-loader-btn {
+  width: 24px;
+  height: 24px;
+  border: 4px solid #f3f3f3; /* Light grey */
+  border-top: 4px solid #ff914d; /* Tomato / orange top */
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+  margin: auto;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
 }
